--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -86,3 +86,14 @@
 body {
     font-family: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
 }
+
+
+/* Add minimum height and width for all links */
+
+a {
+    min-height: 24px;
+    min-width: 24px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
