--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 {{ with site.Data.dashboard }}
 <footer class="bg-gray-800 text-white py-8">
     <div class="max-w-7xl mx-auto px-4 text-center text-sm">
-        <p>© {{ now.Format "2006" }} {{ .header.title }}</p>
+        <p>© {{ .header.title }}, {{ now.Format "2006" }}</p>
     </div>
 </footer>
 {{ end }}
