--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,8 @@
-{{ with site.Data.dashboard }}
+{{/* Access the dashboard data from site.Data */}} {{ with site.Data.dashboard }} {{/* Footer section with gray background, white text and padding */}}
 <footer class="bg-gray-800 text-white py-8">
     <div class="max-w-7xl mx-auto px-4 text-center text-sm">
+        {{/* Copyright line with the site title from dashboard data and current year */}}
         <p>© {{ .header.title }}, {{ now.Format "2006" }}</p>
     </div>
 </footer>
-{{ end }}
+{{/* End of the with block for dashboard data */}} {{ end }}
