--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>{{ block "title" . }} {{- .Site.Title }} - {{ .Title -}} {{ end }}</title>
+    <title>{{ block "title" . }} {{- .Site.Title -}} {{- if .Title -}} {{- print " | " -}} {{- .Title -}} {{- end -}} {{ end }}</title>
     {{- if .Description }}
     <meta name="description" content="{{ .Description }}" /> {{- else }}
     <meta name="description" content="{{ with .Site.Params.description }}{{ . }}{{ else }}Dashboard Deluxe 3 - Your centralized hub for quick access to websites and resources.{{ end }}" /> {{- end }} {{- if .Keywords }}
