--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,7 +8,7 @@
 
 <body class="flex min-h-dvh flex-col sm:min-h-screen">
     {{- partial "header.html" . -}}
-    <main class="">
+    <main class="flex-grow">
         {{- block "main" . }}{{- end }}
     </main>
     {{- partial "footer.html" . -}}
