--- a/layouts/partials/dashboard.html
+++ b/layouts/partials/dashboard.html
@@ -9,11 +9,11 @@
             <div class="grid grid-cols-1 gap-4 mb-4">
                 {{/* Section card with shadow */}}
                 <div class="overflow-hidden shadow-lg">
-                    <div class="outline outline-gray-300 h-full">
+                    <div class="outline outline-gray-300 h-full section section--{{ .name | urlize }}">
                         {{/* Anchor for section navigation */}}
-                        <span id="{{ .name | urlize }}" class="block"></span> {{/* Section header */}}
+                        <span id="{{ .name | urlize }}" class="section__anchor"></span> {{/* Section header */}}
                         <div class="py-2 px-4 bg-gray-800">
-                            <h2 class="font-bold text-xl text-white">
+                            <h2 class="font-bold text-xl text-white section__title">
                                 {{ .name }}
                             </h2>
                         </div>
@@ -22,7 +22,7 @@
                             {{/* Grid layout, 1 column on small/medium screens, 2 columns on lg+ screens */}}
                             <div class="grid grid-cols-1 lg:grid-cols-2">
                                 {{/* Loop through each group in the section */}} {{ range .groups }} {{/* Display group title if it exists */}} {{ if .title }}
-                                <div class="text-lg lg:text-base xl:text-xl font-bold lg:col-span-2 border-b-2 border-gray-400 my-2">
+                                <div class="text-lg lg:text-base xl:text-xl font-bold lg:col-span-2 border-b-2 border-gray-400 my-2 section__sub-title">
                                     {{ .title }}</div>
                                 {{ end }} {{/* Check if any headers exist in this group */}} {{ $hasHeader := false }} {{ range .links }} {{ if or .is_header .no_link }} {{ $hasHeader = true }} {{ end }} {{ end }} {{/* If headers exist, render them first */}} {{ if $hasHeader }} {{
                                 range .links }} {{ if or .is_header .no_link }}
