--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,7 +12,7 @@
                     {{/* Desktop navigation menu */}}
                     <nav class="hidden lg:flex items-center justify-end text-lg">
                         {{/* Loop through all sections defined in dashboard data */}} {{ range .sections }}
-                        <a href="#{{ .name | urlize }}" class="ml-4 text-gray-100 font-semibold text-sm hover:underline js-scroll-link flex items-center px-2">
+                        <a href="#{{ .name | urlize }}" class="ml-2 text-gray-100 font-semibold text-base hover:underline js-scroll-link flex items-center px-1">
                             {{ .link_name }}
                         </a> {{ end }}
                     </nav>
