--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,15 +4,15 @@
         <div class="flex items-center justify-center w-full px-4">
             <div class="max-w-7xl w-full flex items-center justify-between">
                 {{/* Site title with link to home */}}
-                <a href="/" title="{{ .header.title }} home" class="inline-flex items-center hover:underline px-2">
-                    <h1 class="text-xl font-bold text-white my-0">{{ .header.title }}</h1>
+                <a href="/" title="{{ .header.title }} home" class="inline-flex items-center hover:underline px-0">
+                    <h1 class="text-xl xl:text-2xl font-bold text-white my-0">{{ .header.title }}</h1>
                 </a>
 
                 <div class="flex items-center">
                     {{/* Desktop navigation menu */}}
                     <nav class="hidden lg:flex items-center justify-end text-lg">
                         {{/* Loop through all sections defined in dashboard data */}} {{ range .sections }}
-                        <a href="#{{ .name | urlize }}" class="ml-2 text-gray-100 font-semibold text-base hover:underline js-scroll-link flex items-center px-1">
+                        <a href="#{{ .name | urlize }}" class="ml-4 text-gray-100 font-semibold text-base xl:text-lg hover:underline js-scroll-link flex items-center px-0">
                             {{ .link_name }}
                         </a> {{ end }}
                     </nav>
