--- a/layouts/partials/dashboard.html
+++ b/layouts/partials/dashboard.html
@@ -4,7 +4,7 @@
     {{/* Main content area */}}
     <main role="main" class="flex-auto w-full px-4 pb-8 pt-20 flex justify-center">
         {{/* Content width constraint */}}
-        <div class="max-w-7xl w-full">
+        <div class="max-w-[120rem] w-full">
             {{/* Loop through each section in the data structure */}} {{ range .sections }}
             <div class="grid grid-cols-1 gap-4 mb-4">
                 {{/* Section card with shadow */}}
