--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
 <div class="fixed inset-x-0 top-0">
     <header class="flex items-center shadow bg-black py-2 z-50 h-16" role="banner">
         <div class="flex items-center justify-center w-full px-4">
-            <div class="max-w-7xl w-full flex items-center justify-between">
+            <div class="max-w-[120rem] w-full flex items-center justify-between">
                 {{/* Site title with link to home */}}
                 <a href="/" title="{{ .header.title }} home" class="inline-flex items-center hover:underline px-0">
                     <h1 class="text-xl xl:text-2xl font-bold text-white my-0">{{ .header.title }}</h1>
@@ -35,7 +35,7 @@
     {{/* Mobile navigation menu (hidden by default) */}}
     <nav id="js-nav-menu" class="hidden lg:hidden bg-white shadow py-2">
         <div class="flex justify-center">
-            <div class="max-w-7xl w-full">
+            <div class="max-w-[120rem] w-full">
                 <div class="flex flex-wrap">
                     {{/* Loop through sections again for mobile menu */}} {{ range .sections }}
                     <a href="#{{ .name | urlize }}" class="px-4 text-gray-800 font-semibold text-lg py-3 inline-block hover:text-blue-500 js-scroll-link">{{ .link_name }}</a> {{ end }}
