--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,1 +1,3 @@
-{{ define "main" }} {{ partial "dashboard.html" site.Data.dashboard }} {{ end }}
+{{ define "main" }}
+	{{ partial "dashboard.html" site.Data.dashboard }}
+{{ end }}
