--- a/layouts/partials/terms.html
+++ b/layouts/partials/terms.html
@@ -1,10 +1,2 @@
-{{- $page := .page }}
-{{- $taxonomy := .taxonomy }}
-{{- with $page.GetTerms $taxonomy }}
-	{{- $terms := . }}
-	{{- $total := len $terms }}
-	{{- $label := (index $terms 0).Parent.LinkTitle }}
-	{{- range $index, $term := $terms }}
-		<a href="{{ $term.RelPermalink }}" class="text-sm">#{{ $term.LinkTitle }}</a>
-	{{- end }}
-{{- end }}
+{{- $page := .page }} {{- $taxonomy := .taxonomy }} {{- with $page.GetTerms $taxonomy }} {{- $terms := . }} {{- $total := len $terms }} {{- $label := (index $terms 0).Parent.LinkTitle }} {{- range $index, $term := $terms }}
+<a href="{{ $term.RelPermalink }}" class="text-sm">#{{ $term.LinkTitle }}</a> {{- end }} {{- end }}
