--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,7 +12,7 @@
     font-style: normal;
     font-weight: 100;
     font-display: swap;
-    src: url('../fonts/inter/Inter-Thin.woff2') format('woff2');
+    src: url('/fonts/inter/Inter-Thin.woff2') format('woff2');
 }
 
 @font-face {
@@ -20,7 +20,7 @@
     font-style: normal;
     font-weight: 200;
     font-display: swap;
-    src: url('../fonts/inter/Inter-ExtraLight.woff2') format('woff2');
+    src: url('/fonts/inter/Inter-ExtraLight.woff2') format('woff2');
 }
 
 @font-face {
@@ -28,7 +28,7 @@
     font-style: normal;
     font-weight: 300;
     font-display: swap;
-    src: url('../fonts/inter/Inter-Light.woff2') format('woff2');
+    src: url('/fonts/inter/Inter-Light.woff2') format('woff2');
 }
 
 @font-face {
@@ -36,7 +36,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url('../fonts/inter/Inter-Regular.woff2') format('woff2');
+    src: url('/fonts/inter/Inter-Regular.woff2') format('woff2');
 }
 
 @font-face {
@@ -44,7 +44,7 @@
     font-style: normal;
     font-weight: 500;
     font-display: swap;
-    src: url('../fonts/inter/Inter-Medium.woff2') format('woff2');
+    src: url('/fonts/inter/Inter-Medium.woff2') format('woff2');
 }
 
 @font-face {
@@ -52,7 +52,7 @@
     font-style: normal;
     font-weight: 600;
     font-display: swap;
-    src: url('../fonts/inter/Inter-SemiBold.woff2') format('woff2');
+    src: url('/fonts/inter/Inter-SemiBold.woff2') format('woff2');
 }
 
 @font-face {
@@ -60,7 +60,7 @@
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: url('../fonts/inter/Inter-Bold.woff2') format('woff2');
+    src: url('/fonts/inter/Inter-Bold.woff2') format('woff2');
 }
 
 @font-face {
@@ -68,7 +68,7 @@
     font-style: normal;
     font-weight: 800;
     font-display: swap;
-    src: url('../fonts/inter/Inter-ExtraBold.woff2') format('woff2');
+    src: url('/fonts/inter/Inter-ExtraBold.woff2') format('woff2');
 }
 
 @font-face {
@@ -76,7 +76,7 @@
     font-style: normal;
     font-weight: 900;
     font-display: swap;
-    src: url('../fonts/inter/Inter-Black.woff2') format('woff2');
+    src: url('/fonts/inter/Inter-Black.woff2') format('woff2');
 }
 
 body {
